--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,11 @@ plugins {
     id 'com.jfrog.bintray' version '1.3.1'
 }
 
-apply plugin : 'java'
-apply plugin : 'maven'
-apply plugin : 'maven-publish'
-apply plugin : 'idea'
-apply plugin : 'net.sf.gapt'
+apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'idea'
+apply plugin: 'net.sf.gapt'
 //End Plugins
 
 //Program Specific Variables (Fill these in)
@@ -66,7 +66,7 @@ task sourceJar(type: Jar) {
     from sourceSets.main.allJava
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc){
+task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = "javadoc"
     from javadoc.destinationDir
 }
@@ -85,14 +85,18 @@ javadoc.options.encoding = 'UTF-8'
 
 //Jar Configuration
 jar {
-    from configurations.shadow.collect {(it.isDirectory() ? fileTree(it) : zipTree(it)).matching {}}
+    configurations.shadow.each { slice ->
+        from(project.zipTree(slice).asFileTree.matching {
+            include '**/*.class'
+        })
+    }
 }
 //End Jar Configuration
 
 //BinTray Publishing
 publishing {
     publications {
-        maven (MavenPublication) {
+        maven(MavenPublication) {
             artifact jar {
                 classifier ""
             }
