--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,12 @@ jar {
             include '**/*.class'
         })
     }
+	
+    manifest {
+        attributes(
+          'Main-Class': 'com.gmail.socraticphoenix.clack.app.ClackMain'
+        )
+    }
 }
 //End Jar Configuration
 
